--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,22 @@ body{
         align-items: center;
         flex-direction:column;
     }
-    .screen{
+    #screen{
         background-color:white;
         height:400px !important;
         width:500px !important;
         border:10px solid #000;
       /*   box-shadow:10px 5px inset  rgb(47, 42, 42);*/
+      display:grid;
+     
+      font-size:1em;
       
+    }
+    #screen div{
+        border:1px solid #000;
+        margin:0;
+        padding:0;
+        box-sizing: border-box;
     }
     h1{
         font-size:2.5em;
@@ -80,14 +89,12 @@ body{
     align-items: center;
     flex-direction:column;
 }
-.screen{
+#screen{
     background-color:white;
     height:185px/* calc(500/var(--size-divisor)) */;
     width:80%;
     border:10px solid #000;
-   display:grid;
-   grid-template-columns: repeat(16,1fr);
-   grid-template-rows:repeat(16,1fr);
+  
 } 
 .color{
     background-color:#000;
